# yaga

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: add-files.cmake  compiler-options.cmake  yaga-files.cmake
lib/: CMakeLists.txt
lib/prebuilt/libgit2/: build.sh
lib/prebuilt/libgit2/libgit2_builder/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/bl/: preferences.cpp  preferences.h
src/core/: CMakeLists.txt  git.h
src/git/: CMakeLists.txt  checkout.cpp  checkout.h  commit.cpp  commit.h  diff.cpp  diff.h  error.cpp  error.h  init.h  misc.h  oid.cpp  oid.h  remote.cpp  remote.h  repository.cpp  repository.h  revwalk.cpp  revwalk.h  signature.cpp  signature.h  tree.cpp  tree.h  tree_entry.cpp  tree_entry.h  types.h
src/ui/: CMakeLists.txt  Main.qml  ui.qrc
src/ui/Components/: qmldir
src/ui/Pages/: FirstPage.qml  FirstPageForm.ui.qml  qmldir
ui/: CMakeLists.txt  ui.qrc
ui/Components/: TestButton.qml
